--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0-rc.2",
+    "react-quill-new": "^3.4.6",
     "react-router-dom": "^7.6.3",
     "tailwind-scrollbar": "^3.1.0",
     "tailwind-scrollbar-hide": "^4.0.0"
